--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -42,4 +42,5 @@
 <a href="{% url 'main:logout' %}">
   <button>Logout</button>
 </a>
+<h5>Last login session: {{ last_login }}</h5>
 {% endblock content %}
