--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,16 +1,18 @@
- {% extends 'base.html' %}
- {% block content %}
- <h1>Mental Health Tracker</h1>
+{% extends 'base.html' %}
+{% block content %}
+{% include 'navbar.html' %}
 
- <h5>NPM: </h5>
- <p>{{ npm }}<p>
+<h1>Mental Health Tracker</h1>
 
- <h5>Name:</h5>
- <p>{{ name }}</p>
+<h5>NPM: </h5>
+<p>{{ npm }}<p>
 
- <h5>Class:</h5>
- <p>{{ class }}</p>
- {% if not mood_entries %}
+<h5>Name:</h5>
+<p>{{ name }}</p>
+
+<h5>Class:</h5>
+<p>{{ class }}</p>
+{% if not mood_entries %}
 <p>There are no mood data in mental health tracker.</p>
 {% else %}
 <table>
@@ -29,6 +31,19 @@
     <td>{{mood_entry.time}}</td>
     <td>{{mood_entry.feelings}}</td>
     <td>{{mood_entry.mood_intensity}}</td>
+    <td>
+      <a href="{% url 'main:edit_mood' mood_entry.pk %}">
+        <button>Edit Mood</button>
+      </a>
+    </td>
+    <td>
+      <a href="{% url 'main:delete_mood' mood_entry.pk %}">
+        <button>
+            Delete
+        </button>
+      </a>
+    </td>
+
   </tr>
   {% endfor %}
 </table>
