--- a/main/templates/edit_mood.html
+++ b/main/templates/edit_mood.html
@@ -15,14 +15,14 @@
           {% csrf_token %}
           {% for field in form %}
               <div class="flex flex-col">
-                  <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-gray-700">
+                  <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-white">
                       {{ field.label }}
                   </label>
                   <div class="w-full">
                       {{ field }}
                   </div>
                   {% if field.help_text %}
-                      <p class="mt-1 text-sm text-gray-500">{{ field.help_text }}</p>
+                      <p class="mt-1 text-sm text-white">{{ field.help_text }}</p>
                   {% endif %}
                   {% for error in field.errors %}
                       <p class="mt-1 text-sm text-red-600">{{ error }}</p>
@@ -30,7 +30,7 @@
               </div>
           {% endfor %}
           <div class="flex justify-center mt-6">
-              <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
+              <button type="submit" class="bg-[#290029] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#290029] transition duration-300 ease-in-out w-full">
                   Edit Mood Entry
               </button>
           </div>
