--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -5,10 +5,10 @@
 {% endblock meta %}
 
 {% block content %}
-<div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
+<div class="min-h-screen flex items-center justify-center bg-[#290029] py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8 form-style">
     <div>
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-black">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-white">
         Create your account
       </h2>
     </div>
@@ -18,7 +18,7 @@
       <div class="rounded-md shadow-sm -space-y-px">
         {% for field in form %}
           <div class="{% if not forloop.first %}mt-4{% endif %}">
-            <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-black">
+            <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-white">
               {{ field.label }}
             </label>
             <div class="relative">
@@ -26,7 +26,7 @@
               <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
                 {% if field.errors %}
                   <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
-                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                   </svg>
                 {% endif %}
               </div>
@@ -58,9 +58,9 @@
     {% endif %}
 
     <div class="text-center mt-4">
-      <p class="text-sm text-black">
+      <p class="text-sm text-white">
         Already have an account?
-        <a href="{% url 'main:login' %}" class="font-medium text-indigo-200 hover:text-indigo-300">
+        <a href="{% url 'main:login' %}" class="font-medium text-indigo-300 hover:text-indigo-400">
           Login here
         </a>
       </p>
