--- a/template/navbar.html
+++ b/template/navbar.html
@@ -1,4 +1,4 @@
-<nav class="bg-indigo-600 shadow-lg fixed top-0 left-0 z-40 w-screen">
+<nav class="bg-[#290029] shadow-lg fixed top-0 left-0 z-40 w-screen">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
@@ -29,7 +29,7 @@
       </div>
     </div>
     <!-- Mobile menu -->
-    <div class="mobile-menu hidden md:hidden  px-4 w-full md:max-w-full">
+    <div class="mobile-menu hidden md:hidden px-4 w-full md:max-w-full">
       <div class="pt-2 pb-3 space-y-1 mx-auto">
         {% if user.is_authenticated %}
           <span class="block text-gray-300 px-3 py-2">Welcome, {{ user.username }}</span>
