--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block meta %}
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
 <title>Mental Health Tracker</title>
 {% endblock meta %}
 {% block content %}
@@ -126,6 +127,9 @@
     document.getElementById("mood_entry_cards").innerHTML = "";
     document.getElementById("mood_entry_cards").className = "";
     const moodEntries = await getMoodEntries();
+    moods.forEach((item) => {
+      const mood = DOMPurify.sanitize(mood);
+      const feelings = DOMPurify.sanitize(feelings);
 
     let htmlString = "";
     let classNameString = "";
@@ -150,13 +154,13 @@
                 </div>
                 <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
                     <div class="bg-indigo-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
-                        <h3 class="font-bold text-xl mb-2">${item.fields.mood}</h3>
+                        <h3 class="font-bold text-xl mb-2">${mood}</h3>
                         <p class="text-gray-600">${item.fields.time}</p>
                     </div>
                     <div class="p-4">
                         <p class="font-semibold text-lg mb-2">My Feeling</p>
                         <p class="text-gray-700 mb-2">
-                            <span class="bg-[linear-gradient(to_bottom,transparent_0%,transparent_calc(100%_-_1px),#CDC1FF_calc(100%_-_1px))] bg-[length:100%_1.5rem] pb-1">${item.fields.feelings}</span>
+                            <span class="bg-[linear-gradient(to_bottom,transparent_0%,transparent_calc(100%_-_1px),#CDC1FF_calc(100%_-_1px))] bg-[length:100%_1.5rem] pb-1">${feelings}</span>
                         </p>
                         <div class="mt-4">
                             <p class="text-gray-700 font-semibold mb-2">Intensity</p>
@@ -164,12 +168,12 @@
                                 <div class="flex mb-2 items-center justify-between">
                                     <div>
                                         <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-indigo-600 bg-indigo-200">
-                                            ${item.fields.mood_intensity > 10 ? '10+' : item.fields.mood_intensity}
+                                            ${mood_intensity > 10 ? '10+' : mood_intensity}
                                         </span>
                                     </div>
                                 </div>
                                 <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-indigo-200">
-                                    <div style="width: ${item.fields.mood_intensity > 10 ? 100 : item.fields.mood_intensity * 10}%;" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-indigo-500"></div>
+                                    <div style="width: ${mood_intensity > 10 ? 100 : mood_intensity * 10}%;" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-indigo-500"></div>
                                 </div>
                             </div>
                         </div>
